Get arguments from the process

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "bin": {
     "weather": "app.js"
   },
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
